--- a/public/principal.html
+++ b/public/principal.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8" />
 		<title>Alura Typer</title>
 		<link rel="stylesheet" href="./css/libs/materialize.min.css" />
-    <link rel="stylesheet" href="./css/libs/google-fonts.css" />
+		<link rel="stylesheet" href="./css/libs/google-fonts.css" />
+		<link rel="stylesheet" href="./css/libs/selectize.default.css" />
+		<link rel="stylesheet" href="./css/libs/tooltipster.bundle.min.css" />
 		<link rel="stylesheet" href="./css/estilos.css" />
 	</head>
 	<body>
@@ -12,49 +14,81 @@
 			<h1 class="center">Alura Typer</h1>
 			<p class="frase">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et rhoncus dui, et congue ante. In hac habitasse platea dictumst. Aliquam bibendum tincidunt posuere.</p>
 
+			<div class="center">
+				<img src="./img/spinner.gif" alt="Spinner" id="spinner" />
+				<p id="erro">Ocorreu um erro, por favor tente novamente!</p>
+			</div>
+
 			<ul class="informacoes center">
 				<li>
-          <i class="small material-icons icones">description</i>
-          <span id="tamanho-frase">5</span> palavras
-        </li>
+					<i class="small material-icons icones">description</i>
+					<span id="tamanho-frase">5</span> palavras
+				</li>
 
 				<li>
-          <i class="small material-icons icones">query_builder</i>
-          <span id="tempo-digitacao">10</span> segundos
-        </li>
+					<i class="small material-icons icones">query_builder</i>
+					<span id="tempo-digitacao">1</span> segundos
+				</li>
 			</ul>
 
 			<textarea cols="40" rows="8" class="campo-digitacao"></textarea>
 
-			<button id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
-        <i class="material-icons">restore</i>
-      </button>
+			<div class="botoes">
+				<button id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
+					<i class="material-icons">restore</i>
+				</button>
+
+				<button id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
+					<i class="material-icons">assignment</i>
+				</button>
+
+				<button id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
+					<i class="material-icons">shuffle</i>
+				</button>
+
+				<button id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
+					<i class="material-icons">repeat_one</i>
+				</button>
+				<input type="number" min="0" id="frase-id" />
+
+				<div class="select-usuarios">
+					<select id="usuarios">
+						<option value="Douglas">Douglas</option>
+						<option value="Flavio">Flavio</option>
+						<option value="Nico">Nico</option>
+					</select>
+				</div>
+
+				<button id="botao-sync" class="btn-floating btn-large waves-effect waves-light yellow tooltip" title="Sincronizado com sucesso">
+					<i class="material-icons">swap_vert</i>
+				</button>
+			</div>
 
 			<ul>
 				<li><span id="contador-caracteres">0</span> caracteres</li>
 				<li><span id="contador-palavras">0</span> palavras</li>
 			</ul>
 
-      <section class="placar">
-        <h3 class="center">Placar</h3>
-        <table class="centered bordered">
-          <thead>
-            <tr>
-              <th>Usuário</th>
-              <th>No. de palavras</th>
-            </tr>
-          </thead>
+			<section class="placar">
+				<h3 class="center">Placar</h3>
+				<table class="centered bordered">
+					<thead>
+						<tr>
+							<th>Usuário</th>
+							<th>No. de palavras</th>
+						</tr>
+					</thead>
 
-          <tbody>
-            <tr>
-            </tr>
-          </tbody>
-        </table>
-      </section>
+					<tbody></tbody>
+				</table>
+			</section>
 		</div>
 
 		<script src="./js/jquery.js"></script>
 		<script src="./js/main.js"></script>
-    <script src="./js/placar.js"></script>
+		<script src="./js/placar.js"></script>
+		<script src="./js/frase.js"></script>
+		<script src="./js/selectize.js"></script>
+		<script src="./js/tooltipster.bundle.min.js"></script>
 	</body>
 </html>
